@@ -13,16 +13,16 @@ void ex_objc_table_dynamic_intro()
         NSUInteger const AGE = [table addColumnWithName:@"Age" andType:TDBIntType];
 
         /* Add a row with values. */
-        TDBRow *row;
-        row = [table addEmptyRow];
+        NSUInteger rowIndex = [table addRow:nil];
+        TDBRow *row = [table rowAtIndex:rowIndex];
 
-        [row setInt:23 inColumnWithIndex:AGE];
         [row setString:@"Joe" inColumnWithIndex:NAME];
+        [row setInt:23 inColumnWithIndex:AGE];
 
         /* And a few more rows - in a simpler manner */
-        [table addRow:@[@32, @"Simon"]];
-        [table addRow:@[@12, @"Steve"]];
-        [table addRow:@[@100, @"Nick"]];
+        [table addRow:@[@"Simon", @32]];
+        [table addRow:@[@"Steve", @12]];
+        [table addRow:@[@"Nick", @100]];
 
         /* Print using a cursor. */
         for (TDBRow *ite in table)
